<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.mtjin.free_room_tablet.views.code_input.CodeInputViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_white_blue"
        tools:context=".views.code_input.CodeInputActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_16dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@id/gl_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_greetings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:gravity="center"
            android:text="말해보시개 회의실 예약관리 for Tablet"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_horizontal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_input_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:gravity="center"
            android:text="@string/input_business_code_room_code_text"
            android:textSize="@dimen/text_size_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_greetings" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/text_business_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:text="@string/business_code_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toTopOf="@id/et_business_code"
            app:layout_constraintStart_toStartOf="@id/et_business_code"
            app:layout_constraintTop_toBottomOf="@id/text_input_code" />

        <EditText
            android:id="@+id/et_business_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:background="@drawable/shape_white_radius_16dp"
            android:hint="@string/business_code_hint"
            android:text="@={vm.businessCode}"
            app:layout_constraintEnd_toStartOf="@id/gl_right_vertical"
            app:layout_constraintStart_toEndOf="@id/gl_left_vertical"
            app:layout_constraintTop_toBottomOf="@id/text_business_code" />

        <TextView
            android:id="@+id/text_room_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/room_code_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toTopOf="@id/et_room_code"
            app:layout_constraintStart_toStartOf="@id/et_room_code"
            app:layout_constraintTop_toBottomOf="@id/et_business_code" />

        <EditText
            android:id="@+id/et_room_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:background="@drawable/shape_white_radius_16dp"
            android:hint="@string/room_code_hint"
            android:inputType="number"
            android:text="@={vm.meetingRoomCode}"
            app:layout_constraintEnd_toStartOf="@id/gl_right_vertical"
            app:layout_constraintStart_toEndOf="@id/gl_left_vertical"
            app:layout_constraintTop_toBottomOf="@id/text_room_code" />

        <com.skydoves.elasticviews.ElasticButton
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:background="@drawable/shape_blue_radius_16dp"
            android:onClick="@{()->vm.requestEnter()}"
            android:text="@string/enter_text"
            app:button_duration="200"
            app:button_scale="0.9"
            app:layout_constraintEnd_toStartOf="@id/gl_right_vertical"
            app:layout_constraintStart_toEndOf="@id/gl_left_vertical"
            app:layout_constraintTop_toBottomOf="@id/et_room_code" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/question_developer_text"
            app:layout_constraintEnd_toEndOf="@id/btn_enter"
            app:layout_constraintStart_toStartOf="@id/btn_enter"
            app:layout_constraintTop_toBottomOf="@id/btn_enter" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="@{vm.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>