...
    <string name="input_business_code_room_code_text">부여받은 회사코드와 회의실 코드를 입력해주세요</string>
    <string name="business_code_text">회사 코드</string>
    <string name="room_code_text">회의실 코드</string>
    <string name="business_code_hint">BUSINESS_CODE_EXAMPLE</string>
    <string name="room_code_hint">1~7</string>
    <string name="enter_text">입장</string>
    <string name="enter_business_code_text">회사코드를 입력해주세요</string>
    <string name="enter_meeting_room_code_text">회의실 코드를 입력해주세요</string>
    <string name="login_error_text">해당 회사 또는 회의실 코드는 존재하지 않습니다.</string>
    <string name="select_reservation_text">예약방법을 선택해주세요</string>
    <string name="qr_code_text">QR 코드</string>
    <string name="anonymous_text">익명</string>
    <string name="login_text">로그인</string>
    <string name="user_id_text">아이디</string>
...
